# sb820_prometheus_exporter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  mise.toml  poetry.toml  pyproject.toml  readme.md  update_uv_deps.py
.github/: release-drafter.yml
.github/workflows/: build-push-container.yaml  ci_build-push-container.yaml  ci_python_lint_and_test.yaml  meta_cleanup.yaml  meta_release-drafter.yaml  meta_zizmor.yaml  on_release.yaml
app/: main.py
app/err/: exceptions.py
app/sb8200/: __init__.py  metrics.py  parse.py  scrape.py
app/util/: const.py
dashboards/: docker-compose.yaml  sb-exporter.json
dashboards/cfg/: prometheus.yaml
dashboards/cfg/grafana/: ds-prom.yaml
dashboards/ref/: 12078_rev3.json  readme.md
infra/k8s/: .gitignore  deployment.yaml  modem_creds.ref  readme.md
re_notes/: auth.md  connection_status.html  product_info.html
tests/: test_always-passing.py  test_dashboard_queries.py  test_main.py  test_outage_scrape.py
tests/fixtures/: cmconnectionstatus_normal.html  cmconnectionstatus_outage.html
