[project]
name = "sb-exporter"
version = "0.1.0"
description = ""
authors = [{ name = "Karl Quinsland" }]
requires-python = "<4.0,>=3.13"
readme = "readme.md"
dependencies = [
  "structlog>=24.1.0,<25",
  "beautifulsoup4>=4.12.3,<5",
  "prometheus-client>=0.20.0,<0.21",
  "aiohttp>=3.9.3,<4",
]

[dependency-groups]
dev = ["isort>=5.13.2,<6", "black>=24.2.0,<25", "pylint>=3.1.0,<4"]

[tool.hatch.build.targets.sdist]
include = ["app"]

[tool.hatch.build.targets.wheel]
include = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."
addopts = ["--import-mode=importlib"]

# Tell iSort to play nice with Black
[tool.isort]
profile = "black"
