[project]
name = "sb-exporter"
version = "0.1.0"
description = ""
authors = [{ name = "Karl Quinsland" }]
requires-python = "<4.0,>=3.13"
readme = "readme.md"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "prometheus-client>=0.22.1",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
]

[tool.hatch.build.targets.sdist]
include = ["app"]

[tool.hatch.build.targets.wheel]
include = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."
addopts = ["--import-mode=importlib"]

# Tell iSort to play nice with Black
[tool.isort]
profile = "black"
