[project]
name = "sb-exporter"
version = "0.1.0"
description = ""
authors = [{ name = "Karl Quinsland" }]
requires-python = "<4.0,>=3.14"
readme = "readme.md"
dependencies = [
    "aiohttp>=3.14.1",
    "beautifulsoup4>=4.15.0",
    "prometheus-client>=0.25.0",
    "structlog>=26.1.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "pylint>=4.0.6",
    "pytest>=9.1.1",
]


[tool.pytest.ini_options]
# "app" so tests can import the app modules (sb8200, err, util) the same way
#   main.py does when run from inside app/.
pythonpath = [".", "app"]
addopts = ["--import-mode=importlib"]

[tool.black]
target-version = ["py314"]

# Tell iSort to play nice with Black
[tool.isort]
profile = "black"
